--- a/packages/agent/package.json
+++ b/packages/agent/package.json
@@ -1,19 +1,16 @@
 {
   "name": "@wonremote/agent",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.8",
   "main": "electron/main.cjs",
   "type": "module",
   "scripts": {
     "dev": "vite --host --port 3001 --strictPort",
     "build": "vite build",
-
     "electron": "electron electron/main.cjs",
     "electron:dev": "concurrently \"npm run dev\" \"wait-on http://127.0.0.1:3001 && electron electron/main.cjs\"",
-
-    "build:control": "python -m PyInstaller --noconsole --onedir control.py --name control --distpath resources --workpath build/control --clean --strip --hidden-import pyautogui --collect-all pyautogui",
+    "build:control": "node scripts/build-control.mjs",
     "dist": "cross-env CSC_IDENTITY_AUTO_DISCOVERY=false npm run build:control && vite build && electron-builder",
-
     "verify:no-admin": "node scripts/verify-no-admin.mjs"
   },
   "dependencies": {
@@ -46,45 +43,85 @@
       "dist/**",
       "electron/**",
       "package.json",
+      "!**/*.map",
       {
         "from": "../../node_modules/electron-updater",
         "to": "node_modules/electron-updater",
-        "filter": ["**/*", "!**/{test,tests,docs,doc,example,examples,coverage}/**", "!**/*.md"]
+        "filter": [
+          "**/*",
+          "!**/*.map",
+          "!**/{test,tests,docs,doc,example,examples,coverage}/**",
+          "!**/*.md"
+        ]
       },
       {
         "from": "../../node_modules/builder-util-runtime",
         "to": "node_modules/builder-util-runtime",
-        "filter": ["**/*", "!**/{test,tests,docs,doc,example,examples,coverage}/**", "!**/*.md"]
+        "filter": [
+          "**/*",
+          "!**/*.map",
+          "!**/{test,tests,docs,doc,example,examples,coverage}/**",
+          "!**/*.md"
+        ]
       },
       {
         "from": "../../node_modules/fs-extra",
         "to": "node_modules/fs-extra",
-        "filter": ["**/*", "!**/{test,tests,docs,doc,example,examples,coverage}/**", "!**/*.md"]
+        "filter": [
+          "**/*",
+          "!**/*.map",
+          "!**/{test,tests,docs,doc,example,examples,coverage}/**",
+          "!**/*.md"
+        ]
       },
       {
         "from": "../../node_modules/js-yaml",
         "to": "node_modules/js-yaml",
-        "filter": ["**/*", "!**/{test,tests,docs,doc,example,examples,coverage}/**", "!**/*.md"]
+        "filter": [
+          "**/*",
+          "!**/*.map",
+          "!**/{test,tests,docs,doc,example,examples,coverage}/**",
+          "!**/*.md"
+        ]
       },
       {
         "from": "../../node_modules/lazy-val",
         "to": "node_modules/lazy-val",
-        "filter": ["**/*", "!**/{test,tests,docs,doc,example,examples,coverage}/**", "!**/*.md"]
+        "filter": [
+          "**/*",
+          "!**/*.map",
+          "!**/{test,tests,docs,doc,example,examples,coverage}/**",
+          "!**/*.md"
+        ]
       },
       {
         "from": "../../node_modules/semver",
         "to": "node_modules/semver",
-        "filter": ["**/*", "!**/{test,tests,docs,doc,example,examples,coverage}/**", "!**/*.md"]
+        "filter": [
+          "**/*",
+          "!**/*.map",
+          "!**/{test,tests,docs,doc,example,examples,coverage}/**",
+          "!**/*.md"
+        ]
       }
     ],
     "extraResources": [
-      { "from": "resources/control", "to": "control" }
+      {
+        "from": "resources/control",
+        "to": "control"
+      }
     ],
     "win": {
-      "target": ["nsis"],
+      "target": [
+        "nsis"
+      ],
       "icon": "public/icon.ico",
       "requestedExecutionLevel": "requireAdministrator"
     },
+    "electronLanguages": [
+      "en-US",
+      "ko"
+    ],
     "nsis": {
       "oneClick": false,
       "perMachine": true,
